IKASAN-2415 no longer detect file postfix when deleting process related files.